--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,9 +12,9 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_FUNCTIONAPP_NAME: 'FunctionAppServerlessOpenHack'          # set this to your application's name
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'FunctionAppServerlessOpenHack'  # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '3.1.x'                                          # set this to the dotnet version to use
+  AZURE_FUNCTIONAPP_NAME: 'FunctionAppServerlessOpenHack'         # set this to your application's name
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'FunctionAppOH'                 # set this to the path to your web app project, defaults to the repository root
+  DOTNET_VERSION: '3.1.x'                                         # set this to the dotnet version to use
 
 jobs:
   build-and-deploy:
