--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,10 @@
 name: Deploy DotNet project to Azure Function App
 
 on:
-  [workflow_dispatch]
+  pull_request:
+    branches:
+      - master
+  workflow_dispatch:
 
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
