--- a/FunctionAppOH/FunctionAppOH.csproj
+++ b/FunctionAppOH/FunctionAppOH.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.21.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="3.0.10" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="RestSharp" Version="106.12.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
