Update and rename blank.yml to cicd.yml

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,7 +2,7 @@
 name: Deploy DotNet project to Azure Function App
 
 on:
-  pull_request:
+  push:
     branches:
       - master
   workflow_dispatch:
