--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,6 +38,11 @@ jobs:
         name: 'Archiving Package'
         path: './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
         retention-days: 30
+    #- name: Azure App Service Settings
+    #  uses: Azure/appservice-settings@v1
+    #  with:
+    #    app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+    #    app-settings-json: ${{ secrets.AZURE_FUNCTIONAPP_SETTINGS }}
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
